--- a/WebPhongKhamNhi/Views/HoSoKham/GetHoSoTheoBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/GetHoSoTheoBenhNhan.cshtml
@@ -32,6 +32,7 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>@item.MaHoSo</td>
             <td>
                 @Html.DisplayFor(modelItem => item.TrieuChung)
             </td>
