--- a/WebPhongKhamNhi/Views/DonThuoc/Details.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/Details.cshtml
@@ -26,7 +26,7 @@
             Mã hồ sơ
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaHoSoNavigation.MaHoSo)
+            @Html.DisplayFor(model => model.MaHoSo)
         </dd>
     </dl>
     <h3>Danh sách thuốc</h3>
