--- a/WebPhongKhamNhi/Views/HoSoKham/Index.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Danh sách hồ sơ khám bệnh</h1>
-
+<h4>Tìm kiếm theo mã hồ sơ khám và ngày tạo</h4>
 <form asp-action="Index" method="post">
     <input type="text" name="keyword" />
     <button type="submit">Tìm kiếm</button>
