fix lỗi thêm hiển thị user dịch vụ khám

--- a/WebPhongKhamNhi/Views/DichVuKham/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuKham/Delete.cshtml
@@ -6,24 +6,31 @@
 
 <h1>Xoá dịch vụ khám</h1>
 
+@if (ViewData["DichVuFK"] != null)
+{
+    <div class="alert alert-danger">
+        <p>@ViewData["DichVuFK"]</p>
+    </div>
+}
+
 <h3>Bạn chắc chắn muốn xoá dịch vụ này ??</h3>
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TenDichVu)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenDichVu)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ChiPhi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ChiPhi)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="MaDichVu" />
         <input type="submit" value="Xoá" class="btn btn-danger" /> |
