--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/Create.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/Create.cshtml
@@ -21,12 +21,15 @@
                 @Html.DropDownList("MaBenhNhan",
             new SelectList(ViewBag.listBenhNhan, "MaBenhNhan", "HoTen"),
             "--Chọn bệnh nhân--", new { @class = "form-control" })
+                <span asp-validation-for="MaBenhNhan" class="text-danger"></span>
+
             </div>
             <div class="form-group">
-                <label asp-for="MaDichVu" class="control-label"></label>
+                <label asp-for="MaDichVu" class="control-label">Tên dịch vụ</label>
                 @Html.DropDownList("MaDichVu",
             new SelectList(ViewBag.listDichVu, "MaDichVu", "TenDichVu"),
             "--Chọn dịch vụ--", new { @class = "form-control" })
+                <span asp-validation-for="MaDichVu" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TongTien" class="control-label"></label>
@@ -68,7 +71,7 @@
                     $('#TongTien').val(response.chiPhi)
                 }
                 else {
-                    alert('dữ liệu select ')
+                    $('#TongTien').val("");
                 }
             }).fail(function (response) {
                 alert('ajax call failed')
