--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/CreateByIdBenhNhan.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/CreateByIdBenhNhan.cshtml
@@ -18,15 +18,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="MaBenhNhan" class="control-label">Tên bệnh nhân</label>
-                <input type="text" id="MaBenhNhan" name="MaBenhNhan" readonly 
-                       value="@ViewBag.MaBenhNhan.HoTen" class="form-control"/>
-                <input id="idBn" type="hidden" value="@ViewBag.id" />
+                <input type="text" id="TenBenhNhan" readonly
+                       value="@ViewBag.MaBenhNhan.HoTen" class="form-control" />
+                <input asp-for="MaBenhNhan" type="hidden" value="@ViewBag.id" />
+                <span asp-validation-for="MaBenhNhan" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaDichVu" class="control-label"></label>
+                <label asp-for="MaDichVu" class="control-label">Tên dịch vụ</label>
                 @Html.DropDownList("MaDichVu",
             new SelectList(ViewBag.listDichVu, "MaDichVu", "TenDichVu"),
             "--Chọn dịch vụ--", new { @class = "form-control" })
+                <span asp-validation-for="MaDichVu" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TongTien" class="control-label"></label>
@@ -69,6 +71,7 @@
                     $('#TongTien').val(response.chiPhi)
                 }
                 else {
+                    $('#TongTien').val("");
                 }
             }).fail(function (response) {
                 alert('ajax call failed')
