--- a/WebPhongKhamNhi/Views/PhieuDangKyKham/Edit.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuDangKyKham/Edit.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="MaBenhNhan" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaDichVu" class="control-label"></label>
+                <label asp-for="MaDichVu" class="control-label">Tên dịch vụ</label>
                 <select asp-for="MaDichVu" class="form-control"
                         asp-items="@(new SelectList(ViewBag.MaDichVu, nameof(Dichvukham.MaDichVu), nameof(Dichvukham.TenDichVu)))"></select>
                 <span asp-validation-for="MaDichVu" class="text-danger"></span>
