--- a/WebPhongKhamNhi/Views/UserDichVuKham/Index.cshtml
+++ b/WebPhongKhamNhi/Views/UserDichVuKham/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="image group">
                     <div class="images_2_of_2">
                         <a href="details.html">
-                            <img src="images/ser-pic1.jpg" alt="">
+                            <img src="https://www.ibinsina.org/assets/img/services/service1.jpg" alt="image">
                         </a>
                     </div>
                     <div class="span_2_of_2">
