sửa lỗi + giao diện userdichvuxetnghiem

--- a/WebPhongKhamNhi/Views/DichVuXetNghiem/Edit.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuXetNghiem/Edit.cshtml
@@ -8,18 +8,14 @@
 
 <h1>Sửa dịch vụ xét nghiệm</h1>
 <hr />
-@if (ViewData["Message"] != null)
-{
-    <div class="alert alert-danger">@ViewData["Message"]</div>
-}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MaXetNghiem" />
             <div class="form-group">
-                <label asp-for="TenXetNghiem" class="control-label">Tên xét nghiệm</label>
-                <input asp-for="TenXetNghiem" class="form-control" />
+                <label asp-for="TenXetNghiem" class="control-label">Tên xét nghiệm:  </label>
+                @Html.DisplayFor(model => model.TenXetNghiem)
                 <span asp-validation-for="TenXetNghiem" class="text-danger"></span>
             </div>
             <div class="form-group">
