--- a/WebPhongKhamNhi/Views/Shared/_UserLayout.cshtml
+++ b/WebPhongKhamNhi/Views/Shared/_UserLayout.cshtml
@@ -158,23 +158,23 @@
         <div class="menu">
             <ul class="nav">
                 <li class="active">
-                    <a href="index.html" title="Home">Trang chủ</a>
+                    <a href="User" title="Home">Trang chủ</a>
                 </li>
                 <li>
-                    <a href="about.html">Về chúng tôi</a>
+                    <a href="UserDichVuKham">Dịch vụ khám</a>
                 </li>
                 <li>
-                    <a href="service.html">Dịch vụ</a>
+                    <a href="UserDichVuXetNghiem">Dịch vụ xét nghiệm</a>
                 </li>
                 <li>
-                    <a href="contact.html">Thông tin liên lạc</a>
+                    <a href="UserDangKyKham">Đăng ký khám</a>
                 </li>
                 <div class="clear"></div>
             </ul>
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a href="about.html">Về chúng tôi</a>
+                        <a href="#">Về chúng tôi</a>
                     </li>
                     <li>
                         <a class="twitter" href="#" target="_blank"></a>
