--- a/WebPhongKhamNhi/Views/User/Index.cshtml
+++ b/WebPhongKhamNhi/Views/User/Index.cshtml
@@ -4,5 +4,134 @@
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="main1">
+    <div class="c_left">
+        <div class="left">
+            <h2>Welcome</h2>
+            <h4>Lorem Ipsum is simply dummy text of the printing,</h4>
+            <p>
+                Nam ornare vulputate risus,id volutpat elit porttitor non.In consequat nisi vel lectus dapibus sodales.Nam ornare vulputate
+                risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.Nam ornare vulputate risus, id
+                volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.Nam ornare vulputate risus, id volutpat elit
+                porttitor non. In consequat nisi vel lectus dapibus sodales. Pellentesque habitant morbi tristique senectus Nam ornare
+                vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales. PellentesqueNam ornare
+                vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales. Pellentesque habitant
+                morbi tristique senectus et netus et malesuada fames ac turpis egestas Pellentesque habitant morbi tristique senectus
+                et netus et malesuada fames.
+            </p>
+            <div class="rd_more">
+                <a href="#">
+                    <button class="btn btn-3 btn-3e icon-arrow-right">Read More</button>
+                </a>
+            </div>
+        </div>
+        <div class="left left1">
+            <h2>There are many variations of passages of Lorem Ipsum</h2>
+            <p>
+                <a href="#">
+                    <img src="~/usercontent/images/pic5.jpg">
+                </a> Cadipisicing elit,Nam ornare vulputate risus,id volutpat elit porttitor non.In consequat nisi vel lectus dapibus
+                sodales.Nam ornare vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.Nam
+                ornare vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.Nam ornare vulputate
+                risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales. Pellentesque habitant morbi tristique
+                senectus Nam ornare vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.
+                PellentesqueNam ornare vulputate risus, id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas Pellentesque habitant
+                morbi tristique senectus et netus et malesuada fames. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Nam
+                ornare vulputate risus,id volutpat elit porttitor non. In consequat nisi vel lectus dapibus sodales.Nam ornare vulputate
+                risus, id volutpat elit porttitor non.
+            </p>
+            <div class="rd_more">
+                <a href="#">
+                    <button class="btn btn-3 btn-3e icon-arrow-right">Read More</button>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="c_right">
+        <h2>Latest Features</h2>
+        <div class="grid_bg">
+            <div class="grid">
+                <div class="grid_img">
+                    <img src="~/usercontent/images/blog1.jpg" />
+                </div>
+                <div class="grid_txt">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a>21/02/2013</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                        dummy
+                    </p>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="grid">
+                <div class="grid_img">
+                    <img src="~/usercontent/images/blog2.jpg" />
+                </div>
+                <div class="grid_txt">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a>11/03/2013</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                        dummy
+                    </p>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="grid">
+                <div class="grid_img">
+                    <img src="~/usercontent/images/blog3.jpg" />
+                </div>
+                <div class="grid_txt">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a>21/05/2013</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                        dummy
+                    </p>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="grid">
+                <div class="grid_img">
+                    <img src="~/usercontent/images/blog4.jpg" />
+                </div>
+                <div class="grid_txt">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a>21/05/2013</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                        dummy
+                    </p>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <a href="#">
+            <p class="side_bar1_bg"></p>
+        </a>
+    </div>
+    <div class="clear"></div>
+</div>
 
