--- a/WebPhongKhamNhi/Views/UserDichVuKham/Index.cshtml
+++ b/WebPhongKhamNhi/Views/UserDichVuKham/Index.cshtml
@@ -26,7 +26,7 @@
                         </p>
 
                         <div class="rd_more">
-                            <a href="details.html">
+                            <a href="#">
                                 <button class="btn btn-3 btn-3e icon-arrow-right">Xem thêm</button>
                             </a>
                         </div>
