--- a/WebPhongKhamNhi/Views/HoaDonThuoc/Index.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/Index.cshtml
@@ -5,6 +5,10 @@
     int i = 1;
 }
 
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-danger text-center">@TempData["Message"]</div>
+}
 <h1>Danh sách hóa đơn thuốc</h1>
 <h4>Tìm kiếm theo mã đơn thuốc và ngày tạo</h4>
 <form asp-action="Index" method="post">
@@ -75,6 +79,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+
             <div class="modal-body">
                 <form id="form_data" asp-action="Create">
 
@@ -90,7 +95,7 @@
                                 </select>
                             </td>
                             <td>
-                                <input type="number" class="txtSoLuong form-control" min="0" value="0" />
+                                <input type="number" class="txtSoLuong form-control" min="1" value="1" />
                             </td>
                             <td>
                                 <input type="number" class="txtGiaTien form-control" min="0" value="0" />
@@ -168,6 +173,8 @@
             $(this).closest(".trAppended").remove();
             CapNhapID();
         });
+
+
 
     </script>
 }
